metadata/force-app/main/default/objects/CustomName_eOcbA__c/CustomName_eOcbA__c.object-meta.xml
<CustomObject>
    <description>Description_GlILM</description>
    <label>CustomLabel_PBUPm</label>
    <nameField>
        <label>CustomLabel_PBUPm</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_PBUPms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>