metadata/force-app/main/default/objects/CustomName_eOcbA__c/fields/CustomField_kOfTY__c.field-meta.xml
<CustomField>
    <fullName>CustomField_kOfTY__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldogHZs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>